<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="5dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">


            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:tint="@color/white"
                app:srcCompat="@drawable/intro" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:text="@string/registration"
                android:textColor="@color/white"
                android:textSize="30sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"

                android:orientation="vertical"
                android:padding="10dp">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:drawableStart="@drawable/ic_person"
                        android:drawablePadding="2dp"
                        android:drawableTint="@color/white"
                        android:hint="@string/full_name"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:maxLength="50" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:drawableStart="@drawable/ic_dialer_sip"
                        android:drawablePadding="2dp"
                        android:drawableTint="@color/white"
                        android:hint="@string/dial_number"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:maxLength="50" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white">

                    <EditText

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawablePadding="2dp"
                        android:drawableTint="@color/white"
                        android:hint="@string/hint_new_password"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:maxLength="20" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawablePadding="2dp"
                        android:drawableTint="@color/white"
                        android:hint="@string/hint_re_password"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:maxLength="20" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/white"
                    android:gravity="center"
                    android:text="@string/btn_login"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />


            </LinearLayout>


            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/lbl_login"
                android:textAlignment="center"
                android:textColor="@color/white" />


        </LinearLayout>
    </RelativeLayout>
</layout>
